fix audio button & fix map marker  on mobile devices

--- a/css/basics.scss
+++ b/css/basics.scss
@@ -210,11 +210,69 @@ p.huge {font-size:18px;}
 
 // Карта
 .mapmarker {
-	&__content {position: absolute; left: -136px; top: -188px; width: 307px; text-align: center; cursor: pointer;}
-  &__image {box-sizing: border-box; width: 307px; height: 172px; border-radius: 6px; background-color: $base_color_1; position: relative; margin-bottom: 18px;}
-  &__panorama {position: absolute; width: 295px; height: 160px; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2;}
-  &__pin {position: absolute; left: 50%; bottom: 0; width: 31px; height: 43px; transform: translate(-50%, 15px); z-index: 1;}
-	&__location {font-family: $font_2; font-size: 17px; line-height: (34/17)*1em; font-style: italic; white-space: nowrap;}
+	&__content {
+    position: absolute; 
+    left: -136px;
+    top: -188px; 
+    width: 307px; 
+    text-align: center; 
+    cursor: pointer;
+  
+    @media (max-width: 640px) {
+      left: -95px;
+      top: -131px;
+      width: 214px;
+    }
+  }
+  
+  &__image {
+    box-sizing: border-box;
+    width: 307px;
+    height: 172px;
+    border-radius: 6px;
+    background-color: $base_color_1;
+    position: relative; 
+    margin-bottom: 18px;
+    
+    @media (max-width: 640px) {
+      width: 214px;
+      height: 120px;
+      border-radius: 4px;
+    }
+  }
+  
+  &__panorama {
+    position: absolute;
+    width: 295px;
+    height: 160px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    
+    @media (max-width: 640px) {
+      width: 210px;
+      height: 116px;
+    }
+  }
+  
+  &__pin {
+    position: absolute;
+    left: 50%; 
+    bottom: 0;
+    width: 31px;
+    height: 43px;
+    transform: translate(-50%, 15px);
+    z-index: 1;
+  }
+  
+	&__location {
+    font-family: $font_2; 
+    font-size: 17px;
+    line-height: (34/17)*1em;
+    font-style: italic;
+    white-space: nowrap;
+  }
 }
 
 
